--- a/02.md
+++ b/02.md
@@ -66,8 +66,8 @@ The mint and the wallets of its users can derive a keyset ID from the keyset of 
 1 - sort public keys by their amount in ascending order
 2 - concatenate all public keys to one byte array
 3 - HASH_SHA256 the concatenated public keys
-4 - take the first 14 characters of the hex-encoded hash
-5 - prefix it with a keyset ID version byte
+4 - take the first 62 characters of the hex-encoded hash
+5 - prefix it with a keyset ID version byte (2 characters in hex)
 ```
 
 An example implementation in Python:
@@ -76,8 +76,14 @@ An example implementation in Python:
 def derive_keyset_id(keys: Dict[int, PublicKey]) -> str:
     sorted_keys = dict(sorted(keys.items()))
     pubkeys_concat = b"".join([p.serialize() for p in sorted_keys.values()])
-    return "00" + hashlib.sha256(pubkeys_concat).hexdigest()[:14]
+    return "00" + hashlib.sha256(pubkeys_concat).hexdigest()[:62]
 ```
+
+#### Short Keyset ID
+
+The **Short** Keyset ID are a more compact version of a Keyset ID, taking up only 16 hex characters. They are used in Tokens -as opposed to normal keyset IDs- to save more space.
+
+A short keyset ID is composed by taking only the first 16 characters of a hex-encoded keyset ID, including the version byte.
 
 ## Example: Get mint keysets
 
@@ -143,22 +149,22 @@ Here, `id` is the keyset ID, `unit` is the unit string (e.g. "sat") of the keyse
 
 ## Requesting public keys for a specific keyset
 
-To receive the public keys of a specific keyset, a wallet can call the `GET /v1/keys/{keyset_id}` endpoint where `keyset_id` is the keyset ID.
+To receive the public keys of a specific keyset, a wallet can call the `GET /v1/keys/{keyset_id}` endpoint where `keyset_id` is a keyset ID or a short keyset ID.
 
 ### Example
 
 Request of `Alice`:
 
-We request the keys for the keyset `009a1f293253e41e`.
+We request the keys for the keyset `0005de59c2fe00da0b6999d4a75997d1a8ef2f34965661b03bb09c202ac93835`.
 
 ```http
-GET https://mint.host:3338/v1/keys/009a1f293253e41e
+GET https://mint.host:3338/v1/keys/0005de59c2fe00da
 ```
 
 With curl:
 
 ```bash
-curl -X GET https://mint.host:3338/v1/keys/009a1f293253e41e
+curl -X GET https://mint.host:3338/v1/keys/0005de59c2fe00da
 ```
 
 Response of `Bob` (same as [NUT-01][01]):
@@ -166,7 +172,7 @@ Response of `Bob` (same as [NUT-01][01]):
 ```json
 {
   "keysets": [{
-    "id": "009a1f293253e41e",
+    "id": "0005de59c2fe00da0b6999d4a75997d1a8ef2f34965661b03bb09c202ac93835",
     "unit": "sat",
     "keys": {
         "1": "02194603ffa36356f4a56b7df9371fc3192472351453ec7398b8da8117e7c3e104",
