--- a/protocol_extensions/anonymous_credentials/AC-00.md
+++ b/protocol_extensions/anonymous_credentials/AC-00.md
@@ -30,9 +30,11 @@ Generators are points on the `secp256k1` curve can be used as a basis from which
 Each generator is derived using NUMS (Nothing Up My Sleeve) as `hash_to_curve(<generator_name_or_subscript>)`.
 
 For example, $G_w$ is obtained by inputting the subscript `w` into `hash_to_curve`:
+
 ```
 G_w = hash_to_curve("w")
 ```
+
 This ensures that the discrete logarithm relation between any pair of them remains unknown.
 
 The term "generator" here is used loosely. While NUMS points might not necessarily generate the entire group of points on the curve, they can still be considered generators in the sense that they can be used to derive a large number of other points through repeated point addition:
@@ -43,16 +45,19 @@ The term "generator" here is used loosely. While NUMS points might not necessari
 - $G_\text{blind}$: Used for the blinding terms.
 
 ## Mint Keys
+
 `MintPrivateKey` is a single tuple of six secret values (for all amounts):
+
 ```math
 sk = (w, w', x_0, x_1, y_a, y_s)
 ```
 
-* $y_a$: key for signing amount commitments.
-* $y_s$: key for signing script commitments.
-* $w, w', x_0, x_1$: additional secret values needed for the algebraic MAC as presented in [[1]](1)
+- $y_a$: key for signing amount commitments.
+- $y_s$: key for signing script commitments.
+- $w, w', x_0, x_1$: additional secret values needed for the algebraic MAC as presented in [[1]](1)
 
 `MintPublicKey` is a tuple $(I, C_w)$, calculated as:
+
 ```math
 \displaylines{
 \begin{align}
@@ -62,24 +67,23 @@ C_w &= w\cdot G_w + w'\cdot G_{w'}
 }
 ```
 
-
 ## Pedersen Commitments
 
 A Pedersen Commitment is a cryptographic primitive used to commit to a chosen value while keeping it hidden.
 
 Given two generators $G$ and $H$ such that the discrete logarithm relation between them is unknown, a Pedersen Commitment that hides a secret value $a$ with blinding factor $r$ is computed as:
+
 ```math
     M = a\cdot G + r\cdot H
 ```
 
 This commitment has certain properties that make it particularly useful:
 
-* **Hiding**: The commitment doesn't reveal the value. This means that given the commitment, one cannot infer the original value $a$.
+- **Hiding**: The commitment doesn't reveal the value. This means that given the commitment, one cannot infer the original value $a$.
 
-* **Binding**: Once committed to a value, one cannot change it. This ensures that one can't claim the commitment represents some other value.
+- **Binding**: Once committed to a value, one cannot change it. This ensures that one can't claim the commitment represents some other value.
 
-* **Homomorphism**: Pedersen Commitments have a mathematical property where commitments can be combined.
-
+- **Homomorphism**: Pedersen Commitments have a mathematical property where commitments can be combined.
 
 ## Attributes
 
@@ -113,10 +117,12 @@ V = w\cdot G_w + x_0 \cdot U + x_1 \cdot t \cdot U + y_a\cdot M_a + y_s\cdot M_s
 ```
 
 ## Coin
+
 A `Coin` is a collection of the following:
-* `MAC`
-* `AmountAttribute`
-* `ScriptAttribute`.
+
+- `MAC`
+- `AmountAttribute`
+- `ScriptAttribute`.
 
 `Alice` can put together a `Coin` after receiving the `MAC` from `Bob`.
 
@@ -124,11 +130,11 @@ A `Coin` is a collection of the following:
 
 This section describes the protocol, which is composed by 3 phases:
 
-1) **Bootstrap**: Una-tantum phase in which `Alice` asks `Bob` for a `MAC` on commitments encoding $0$. Since every request in the protocol expects inputs and outputs, this step is crucial for getting initial inputs.
+1. **Bootstrap**: Una-tantum phase in which `Alice` asks `Bob` for a `MAC` on commitments encoding $0$. Since every request in the protocol expects inputs and outputs, this step is crucial for getting initial inputs.
 
-2) **Issuance**: `Alice` pays `Bob` and asks to issue a `MAC` on commitments that encode value
+2. **Issuance**: `Alice` pays `Bob` and asks to issue a `MAC` on commitments that encode value
 
-3) **Redemption**: `Alice` presents `Bob` with valid coins and requests a payout.
+3. **Redemption**: `Alice` presents `Bob` with valid coins and requests a payout.
 
 > [!NOTE]
 > Phases 2 and 3 always happen simultaneously: `Alice` presents valid credentials and asks for new ones in **EVERY** request.
@@ -151,24 +157,23 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 1. `Alice` creates request <u>outputs</u>: **new** `AmountAttribute` and `ScriptAttribute` pairs that encode respectively the final wallet balance (minus any fees) and, optionally, the hash of the script describing the spending conditions.
 
 2. `Alice` creates request <u>inputs</u> by taking a previously received `Coin` and randomizing it into a `RandomizedCoin`, which is what breaks the link to its issuance. The process works as follows:
-    * `(AmountAttribute, ScriptAttribute, MAC) = Coin`
-    * $U = \text{HashToCurve}(t)$, where $t$ is the `MAC` scalar value
-    * $C_a = r_a\cdot G_\text{zamount} + M_a$, where $r_a$ is the blinding value for `AmountAttribute`.
-    * $C_s = r_a\cdot G_\text{zscript} + M_s$
-    * $C_{x_0} = r_a\cdot G_{x_0} + U$
-    * $C_{x_1} = r_a\cdot G_{x_1} + t\cdot U$
-    * $C_v = r_a\cdot G_\text{zmac} + V$, where $V$ is the `MAC` public point value
-    * `RandomizedCoin`: $(C_a, C_s, C_{x_0}, C_{x_1}, C_v)$
+   - `(AmountAttribute, ScriptAttribute, MAC) = Coin`
+   - $U = \text{HashToCurve}(t)$, where $t$ is the `MAC` scalar value
+   - $C_a = r_a\cdot G_\text{zamount} + M_a$, where $r_a$ is the blinding value for `AmountAttribute`.
+   - $C_s = r_a\cdot G_\text{zscript} + M_s$
+   - $C_{x_0} = r_a\cdot G_{x_0} + U$
+   - $C_{x_1} = r_a\cdot G_{x_1} + t\cdot U$
+   - $C_v = r_a\cdot G_\text{zmac} + V$, where $V$ is the `MAC` public point value
+   - `RandomizedCoin`: $(C_a, C_s, C_{x_0}, C_{x_1}, C_v)$
 
 > [!NOTE]
 > Slight deviation from the original KVAC scheme, where the value is picked as a random $z$.
 > We choose to use $r_a$ because we eliminate 1 witness value from $\pi_\text{MAC}$ and simplify it a bit.
 
 3. `Alice` generates the following Zero-Knowledge Proofs:
-    - $\pi_\text{balance}$: Proves that the balance difference $\Delta_a$ between inputs and outputs is consistent with the request's claim.
-    - $\pi_\text{range}$: For each new `AmountAttribute` in the outputs, proves the committed value is within the range $[0, L-1]$, where $L$ is some agreed upon bound.
-    - $\pi_\text{MAC}$: For each `RandomizedCoin` shows that it indeed is the valid randomized version of <u>some</u> existing `Coin`.
-
+   - $\pi_\text{balance}$: Proves that the balance difference $\Delta_a$ between inputs and outputs is consistent with the request's claim.
+   - $\pi_\text{range}$: For each new `AmountAttribute` in the outputs, proves the committed value is within the range $[0, L-1]$, where $L$ is some agreed upon bound.
+   - $\pi_\text{MAC}$: For each `RandomizedCoin` shows that it indeed is the valid randomized version of <u>some</u> existing `Coin`.
 
 ---
 
