complete the exchange.

--- a/protocol_extensions/anonymous_credentials/AC-00.md
+++ b/protocol_extensions/anonymous_credentials/AC-00.md
@@ -154,6 +154,8 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 
 ### Issuance & Redemption
 
+0. `Bob` publicly announces `MintPublicKey`
+
 1. `Alice` creates request <u>outputs</u>: **new** `AmountAttribute` and `ScriptAttribute` pairs that encode respectively the final wallet balance (minus any fees) and, optionally, the hash of the script describing the spending conditions.
 
 2. `Alice` creates request <u>inputs</u> by taking a previously received `Coin` and randomizing it into a `RandomizedCoin`, which is what breaks the link to its issuance. The process works as follows:
@@ -174,6 +176,13 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
    - $\pi_\text{balance}$: Proves that the balance difference $\Delta_a$ between inputs and outputs is consistent with the request's claim.
    - $\pi_\text{range}$: For each new `AmountAttribute` in the outputs, proves the committed value is within the range $[0, L-1]$, where $L$ is some agreed upon bound.
    - $\pi_\text{MAC}$: For each `RandomizedCoin` shows that it indeed is the valid randomized version of <u>some</u> existing `Coin`.
+
+4. `Alice` sends $((C_a, C_s, C_{x_0}, C_{x_1}, C_v), (M_a, M_s), \pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC})$.
+5. `Bob` verifies $\pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC}$, and that the same $C_a$ value wasn't presented in a previous request. This prevents any double-spends of the same coin.
+6. `Bob` issues a `MAC` on $(M_a, M_s)$.
+7. `Bob` generates $\pi_\text{issuance}$, to prove that `MAC` was issued with `MintPrivateKey`.
+8. `Alice` receives $(t, V, \pi_\text{issuance})$ and verifies $\pi_\text{issuance}$.
+9. `Alice` saves `Coin(AmountAttribute, ScriptAttribute, MAC)`.
 
 ---
 
