--- a/protocol_extensions/anonymous_credentials/AC-00.md
+++ b/protocol_extensions/anonymous_credentials/AC-00.md
@@ -54,7 +54,7 @@ sk = (w, w', x_0, x_1, y_a, y_s)
 
 - $y_a$: key for signing amount commitments.
 - $y_s$: key for signing script commitments.
-- $w, w', x_0, x_1$: additional secret values needed for the algebraic MAC as presented in [[1]](1)
+- $w, w', x_0, x_1$: additional secret values needed for the algebraic MAC as presented in [[1]].
 
 `MintPublicKey` is a tuple $(I, C_w)$, calculated as:
 
@@ -158,7 +158,7 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 
 1. `Alice` creates request <u>outputs</u>: **new** `AmountAttribute` and `ScriptAttribute` pairs that encode respectively the final wallet balance (minus any fees) and, optionally, the hash of the script describing the spending conditions.
 
-2. `Alice` creates request <u>inputs</u> by taking a previously received `Coin` and randomizing it into a `RandomizedCoin`, which is what breaks the link to its issuance. The process works as follows:
+2. `Alice` creates request <u>inputs</u> by taking a previously received `Coin` that encodes the current balance and randomizing it into a `RandomizedCoin`. "Randomizing" is what breaks the link to the issuance. The process works as follows:
    - `(AmountAttribute, ScriptAttribute, MAC) = Coin`
    - $U = \text{HashToCurve}(t)$, where $t$ is the `MAC` scalar value
    - $C_a = r_a\cdot G_\text{zamount} + M_a$, where $r_a$ is the blinding value for `AmountAttribute`.
@@ -170,7 +170,7 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 
 > [!NOTE]
 > Slight deviation from the original KVAC scheme, where the value is picked as a random $z$.
-> We choose to use $r_a$ because we eliminate 1 witness value from $\pi_\text{MAC}$ and simplify it a bit.
+> We choose to use $r_a$ because it makes $\pi_\text{MAC}$ slightly less bulky and simplies the notation.
 
 3. `Alice` generates the following Zero-Knowledge Proofs:
 
@@ -178,7 +178,7 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
    - $\pi_\text{range}$: For each new `AmountAttribute` in the outputs, proves the committed value is within the range $[0, L-1]$, where $L$ is some agreed upon bound.
    - $\pi_\text{MAC}$: For each `RandomizedCoin` shows that it indeed is the valid randomized version of <u>some</u> existing `Coin`.
 
-4. `Alice` sends $((C_a, C_s, C_{x_0}, C_{x_1}, C_v), (M_a, M_s), \pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC})$.
+4. `Alice` sends $((C_a, C_s, C_{x_0}, C_{x_1}, C_v), (t, M_a, M_s), \pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC})$, where $t$ is a scalar chosen uniformly at random.
 5. `Bob` verifies $\pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC}$, and that the same $C_a$ value wasn't presented in a previous request. This prevents any double-spends of the same coin.
 6. `Bob` issues a `MAC` on $(M_a, M_s)$.
 7. `Bob` generates $\pi_\text{issuance}$, to prove that `MAC` was issued with `MintPrivateKey`.
