--- a/protocol_extensions/anonymous_credentials/AC-00.md
+++ b/protocol_extensions/anonymous_credentials/AC-00.md
@@ -139,7 +139,7 @@ This section describes the protocol, which is composed by 3 phases:
 > [!NOTE]
 > Phases 2 and 3 always happen simultaneously: `Alice` presents valid credentials and asks for new ones in **EVERY** request.
 
-We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thoroughly described in a later section.
+We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. For the time being it's useful to just imagine them as an "evidence" black box. They are thoroughly described in a later section.
 
 ### Bootstrap
 
@@ -159,7 +159,7 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 1. `Alice` creates request <u>outputs</u>: **new** `AmountAttribute` and `ScriptAttribute` pairs that encode respectively the final wallet balance (minus any fees) and, optionally, the hash of the script describing the spending conditions.
 
 2. `Alice` creates request <u>inputs</u> by taking a previously received `Coin` that encodes the current balance and randomizing it into a `RandomizedCoin`. "Randomizing" is what breaks the link to the issuance. The process works as follows:
-   - `(AmountAttribute, ScriptAttribute, MAC) = Coin`
+    `(AmountAttribute, ScriptAttribute, MAC) = Coin`
    - $U = \text{HashToCurve}(t)$, where $t$ is the `MAC` scalar value
    - $C_a = r_a\cdot G_\text{zamount} + M_a$, where $r_a$ is the blinding value for `AmountAttribute`.
    - $C_s = r_a\cdot G_\text{zscript} + M_s$
@@ -170,7 +170,7 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
 
 > [!NOTE]
 > Slight deviation from the original KVAC scheme, where the value is picked as a random $z$.
-> We choose to use $r_a$ because it makes $\pi_\text{MAC}$ slightly less bulky and simplies the notation.
+> We choose to use $r_a$ because it makes $\pi_\text{MAC}$ slightly less bulky and simplies things.
 
 3. `Alice` generates the following Zero-Knowledge Proofs:
 
@@ -178,13 +178,57 @@ We use $\pi_\text{<subscript>}$ to refer to Zero-Knowledge proofs. They are thor
    - $\pi_\text{range}$: For each new `AmountAttribute` in the outputs, proves the committed value is within the range $[0, L-1]$, where $L$ is some agreed upon bound.
    - $\pi_\text{MAC}$: For each `RandomizedCoin` shows that it indeed is the valid randomized version of <u>some</u> existing `Coin`.
 
-4. `Alice` sends $((C_a, C_s, C_{x_0}, C_{x_1}, C_v), (t, M_a, M_s), \pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC})$, where $t$ is a scalar chosen uniformly at random.
+4. `Alice` sends $((C_a, C_s, C_{x_0}, C_{x_1}, C_v), (t, M_a, M_s), \pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC})$, where $t$ is a scalar chosen uniformly at random. 
 5. `Bob` verifies $\pi_\text{balance}, \pi_\text{range}, \pi_\text{MAC}$, and that the same $C_a$ value wasn't presented in a previous request. This prevents any double-spends of the same coin.
-6. `Bob` issues a `MAC` on $(M_a, M_s)$.
+6. `Bob` issues a `MAC` on $(t, M_a, M_s)$.
 7. `Bob` generates $\pi_\text{issuance}$, to prove that `MAC` was issued with `MintPrivateKey`.
 8. `Alice` receives $(t, V, \pi_\text{issuance})$ and verifies $\pi_\text{issuance}$.
 9. `Alice` saves `Coin(AmountAttribute, ScriptAttribute, MAC)`.
 
 ---
 
+## Sigma-Protocol Zero-Knowledge Proofs
+In the simplest case of a Sigma-protocol zero-knowledge proof, a prover demonstrates knowledge of a the same secret value used to compute 2 public inputs without revealing it. Consider a specific example where the prover knows a secret value $x$ and has computed two public points:
+- $X = x·G$ (where $G$ is a standard generator point)
+- $X_A = x·A$ (where $A = a·G$ for some unknown value $a$)
+
+The protocol proceeds as follows:
+
+### Step 1: Commitment
+The prover creates a random value $k$ (a "nonce") and computes:
+- $R1 = k\cdot G$
+- $R2 = k\cdot A$
+
+These values are called public nonce-commitments, representing a temporary "hiding" of information.
+
+### Step 2: Challenge
+The verifier (or a hash function in non-interactive mode) creates a random challenge $c$.
+
+### Step 3: Response
+The prover computes a response: $z = k + c\cdot x$
+
+### Step 4: Verification
+The verifier checks two equations:
+1. Does $R1 \stackrel{?}= z\cdot G - c\cdot X$?
+2. Does $R2 \stackrel{?}= z\cdot A - c\cdot X_A$?
+
+The verification works mathematically because:
+
+For the first equation:
+- $k\cdot G = z\cdot G - c\cdot X = (k + c\cdot x)\cdot G - c\cdot X = k\cdot G + c\cdot x\cdot G - c\cdot X = R1 $
+
+For the second equation:
+- $k\cdot G = z \cdot A - c \cdot X_A = (k + c\cdot x) \cdot A - c\cdot X_A = k\cdot A + c\cdot x\cdot A - c \cdot X_A = R2$
+
+If both equations check out, the verifier is convinced of the prover's knowledge of $x$ without learning its value.
+
+### Zero-Knowledge Properties
+- The random $k$ hides any information about $x$
+- The challenge $c$ ensures the prover cannot cheat
+- The response $z$ combines randomness with the secret in a way that reveals nothing about the secret itself
+
+### Knowledge Soundness
+If the prover can provide the correct response z for any random challenge c, it strongly suggests knowledge of the secret x, because the mathematical relationship between z, the commitments, and the public values only works if the correct x is known.
+
+---
 [1]: https://signal.org/blog/pdfs/signal_private_group_system.pdf
