--- a/protocol_extensions/anonymous_credentials/AC-00.md
+++ b/protocol_extensions/anonymous_credentials/AC-00.md
@@ -231,4 +231,61 @@ If both equations check out, the verifier is convinced of the prover's knowledge
 If the prover can provide the correct response z for any random challenge c, it strongly suggests knowledge of the secret x, because the mathematical relationship between z, the commitments, and the public values only works if the correct x is known.
 
 ---
+
+## Extending Sigma-Protocols to Multi-Commitment Linear Proofs
+
+Sigma-protocols can be extended to prove multiple linear relations simultaneously, creating more efficient proofs for complex statements. This extension allows a prover to demonstrate knowledge of multiple secret values that satisfy various linear relations.
+
+### Multi-Commitment Linear Proofs
+
+Consider a scenario where a prover needs to demonstrate knowledge of multiple secret values $x_1, x_2, ..., x_n$ that satisfy several linear relations. Instead of creating separate proofs for each relation, a single proof can be constructed.
+
+### Setup
+The prover has computed several public commitments from secret values:
+- $X_1 = x_1 \cdot G$
+- $X_2 = x_2 \cdot G$
+- $...$
+- $X_n = x_n \cdot G$
+
+And potentially additional public commitments representing linear combinations:
+- $Y_1 = a_{11}x_1 + a_{12}x_2 + ... + a_{1n}x_n$ (commitment to first linear relation)
+- $Y_2 = a_{21}x_1 + a_{22}x_2 + ... + a_{2n}x_n$ (commitment to second linear relation)
+- $...$
+- $Y_m = a_{m1}x_1 + a_{m2}x_2 + ... + a_{mn}x_n$ (commitment to mth linear relation)
+
+### Protocol Structure
+
+The protocol can be organized in a tabular form:
+
+| Step | Commitments (Rows) | Witnesses/Responses (Columns) |
+|------|--------------------|-----------------------------|
+| 1. Commitment | Generate random values $k_1, k_2, ..., k_n$<br>Compute commitments $R_i = k_i \cdot G$ for each secret<br>Compute additional commitments for each linear relation | The commitment matrix contains all $R_i$ values and additional commitments for linear relations |
+| 2. Challenge | Receive a single challenge value $c$ | Challenge $c$ applies across all relations |
+| 3. Response | Compute $z_i = k_i + c \cdot x_i$ for each secret | The response vector contains all $z_i$ values |
+| 4. Verification | For each base commitment: $z_i \cdot G \stackrel{?}{=} R_i + c \cdot X_i$<br>For each linear relation: verify the corresponding equation using the responses | Verifier checks all equations in parallel |
+
+### Example with Two Secrets and One Linear Relation
+
+Consider proving knowledge of secrets $x_1$ and $x_2$ where they also satisfy $x_1 + 2x_2 = m$ for some public value $m$.
+
+| Commitments | Secret $x_1$ | Secret $x_2$ | Linear Relation $x_1 + 2x_2 = m$ |
+|-------------|----------------|----------------|-------------------------------------|
+| Public Values | $X_1 = x_1 \cdot G$ | $X_2 = x_2 \cdot G$ | $Y = m \cdot G$ |
+| Commitment Step | $R_1 = k_1 \cdot G$ | $R_2 = k_2 \cdot G$ | $R_3 = (k_1 + 2k_2) \cdot G$ |
+| Response (for challenge $c$) | $z_1 = k_1 + c \cdot x_1$ | $z_2 = k_2 + c \cdot x_2$ | (uses $z_1$ and $z_2$) |
+
+### Verification
+The verifier checks:
+1. $z_1 \cdot G \stackrel{?}{=} R_1 + c \cdot X_1$
+2. $z_2 \cdot G \stackrel{?}{=} R_2 + c \cdot X_2$
+3. $(z_1 + 2z_2) \cdot G \stackrel{?}{=} R_3 + c \cdot Y$
+
+### Advantages
+- Single challenge for multiple relations
+- Reduced communication complexity
+- Compact proof size
+- Can be made non-interactive using Fiat-Shamir heuristic
+
+This approach scales efficiently to proving arbitrary systems of linear relations among secret values, making it powerful for applications like confidential transactions, polynomial commitments, and range proofs.
+
 [1]: https://signal.org/blog/pdfs/signal_private_group_system.pdf
